--- a/social_app/pubspec.yaml
+++ b/social_app/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
 
 
 
-
   #firebase
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
@@ -65,7 +64,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/images/logo.png
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
