--- a/social_app/pubspec.yaml
+++ b/social_app/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   fluttertoast: ^8.2.2
   image_picker: ^1.0.2
   like_button: ^2.0.5
+  internet_connection_checker_plus: ^2.2.0
+  connectivity_plus: ^5.0.2
+
+
 
 
 
@@ -66,16 +70,18 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
-  android: true
-  ios: true
-  image_path: assets/images/logo.png
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/images/logo.png
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
